<?xml version="1.0" encoding="utf-8"?>

<!--내가 높은 점수를 준 사람(4점 이상), 나에게 높은 점수를 준 사람(4점 이상), 나에게 호감을 표현한 사람, 내가 호감을 표현 한 사람

1. 모든 데이터는 직접 지울 수 있고 or 1달 뒤에 자동 소멸
-->
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receiveFavorite"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sendFavorite"
        />
    </LinearLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receiveHighScore"
    />

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>