<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:scrollbars="vertical">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recommendation"
                android:textSize="24dp"
                android:layout_marginHorizontal="16dp"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="지금 호감을 표시하고 대화하세요"
                android:layout_marginBottom="16dp"
                android:layout_marginHorizontal="16dp"
                />

        <!--프로필 사진 나타낼 뷰페이저-->
        <!--<android.support.v4.view.ViewPager-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="400dp">-->
        <!--</android.support.v4.view.ViewPager>-->
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <androidx.viewpager.widget.ViewPager
                    android:id="@+id/home_viewPager"
                    android:layout_width="wrap_content"
                    android:layout_height="380dp"
                    android:layout_margin="30dp"
                    >
            </androidx.viewpager.widget.ViewPager>
            <com.google.android.material.tabs.TabLayout
                    android:id="@+id/home_viewPager_tab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:tabBackground="@drawable/tab_selector"
                    app:tabGravity="center"
                    app:tabIndicatorHeight="0dp"
                    android:layout_alignBottom="@id/home_viewPager"
                    />
        </RelativeLayout>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/moreRecommendation"
                android:background="@drawable/round_corner35dp"
                android:textColor="@color/moreRecommendationButtonText"
                android:textStyle="bold"
                android:layout_margin="30dp"
                android:textSize="20dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idealType"
                android:layout_marginHorizontal="16dp"
                android:textSize="24dp"/>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="vertical">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp">

                <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/icon_tiara"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/topTenPercentRecommendation"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:textSize="18dp"
                />
                <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                >
                </View>
                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/idealTypeSelect"
                        android:background="@drawable/round_corner35dp"
                        android:textColor="@color/idealTypeSelectButtonText"
                        android:textStyle="bold"
                />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="15dp">

                <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/icon_travel"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/TravelRecommendation"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:textSize="18dp"
                />
                <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                >
                </View>
                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/idealTypeSelect"
                        android:background="@drawable/round_corner35dp"
                        android:textColor="@color/idealTypeSelectButtonText"
                        android:textStyle="bold"
                />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="15dp">

                <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/icon_ruler"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shortRecommendation"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:textSize="18dp"
                />
                <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                >
                </View>
                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/idealTypeSelect"
                        android:background="@drawable/round_corner35dp"
                        android:textColor="@color/idealTypeSelectButtonText"
                        android:textStyle="bold"
                />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="15dp">

                <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/icon_ruler"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tallRecommendation"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:textSize="18dp"
                />
                <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                >
                </View>
                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/idealTypeSelect"
                        android:background="@drawable/round_corner35dp"
                        android:textColor="@color/idealTypeSelectButtonText"
                        android:textStyle="bold"
                />
            </LinearLayout>


            <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/idealTypeAllView"
                    android:background="@drawable/round_corner35dp"
                    android:textColor="@color/moreRecommendationButtonText"
                    android:textStyle="bold"
                    android:layout_margin="10dp"
                    android:textSize="20dp"/>
        </LinearLayout>
        <!--이상형 추천 레이아웃 마지막-->


    </LinearLayout>

</ScrollView>