<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:textSize="20dp"
                    android:gravity="center"
                    android:text="@string/itemBuy"
                    android:layout_weight="1"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:textSize="20dp"
                    android:gravity="center"
                    android:text="@string/itemInventory"
                    android:layout_weight="1"/>
        </LinearLayout>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:textSize="20dp"
                android:gravity="center"
                android:text="@string/buyMembership"/>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="100dp">
            <ImageView android:layout_width="50dp" android:layout_height="50dp" android:src="@drawable/icon_rings_color"
                       app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                       app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
                       app:layout_constraintHorizontal_bias="0.044"
                       android:id="@+id/imageView" app:layout_constraintVertical_bias="0.5"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:gravity="center"
                    android:text="30일 회원권"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintHorizontal_bias="0.5" app:layout_constraintVertical_bias="0.0"
                    android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/textView3"
                    app:layout_constraintStart_toEndOf="@+id/imageView" android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"/>
            <TextView
                    android:layout_width="220dp"
                    android:layout_height="41dp"
                    android:textSize="14dp"
                    android:text="한 달간 모든 서비스를 무제한으로 사용 가능 합니다"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintHorizontal_bias="0.445" app:layout_constraintVertical_bias="0.0"
                    android:id="@+id/textView2" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    android:layout_marginStart="8dp" android:layout_marginLeft="8dp"/>

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintHorizontal_bias="0.5" app:layout_constraintVertical_bias="0.613"
                    android:layout_marginBottom="8dp" app:layout_constraintStart_toEndOf="@+id/textView2"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                    android:text="구매하기"
                    android:background="@color/idealTypeSelectButtonBackgound"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:textSize="20dp"
                android:gravity="center"
                android:text="HEART SHOP"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="vertical">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="15dp">

                <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/icon_hearts"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="50 하트"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:textSize="18dp"
                />
                <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                >
                </View>
                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="￦10,000"
                        android:background="#FFFFFF"
                        android:textColor="@color/idealTypeSelectButtonBackgound"
                        android:textStyle="bold"
                />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="15dp">

                <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/icon_hearts"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="100 하트"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:textSize="18dp"
                />
                <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                >
                </View>
                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="￦20,000"
                        android:background="#ffffff"
                        android:textColor="@color/idealTypeSelectButtonBackgound"
                        android:textStyle="bold"
                />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="15dp">

                <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/icon_hearts"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="150 하트"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:textSize="18dp"
                />
                <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                >
                </View>
                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="￦30,000"
                        android:background="#ffffff"
                        android:textColor="@color/idealTypeSelectButtonBackgound"
                        android:textStyle="bold"
                />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="15dp">

                <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/icon_hearts"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="200 하트"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:textSize="18dp"
                />
                <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                >
                </View>
                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="￦40,000"
                        android:background="#ffffff"
                        android:textColor="@color/idealTypeSelectButtonBackgound"
                        android:textStyle="bold"
                />
            </LinearLayout>

        </LinearLayout>
        <!--이상형 추천 레이아웃 마지막-->

    </LinearLayout>
</ScrollView>